--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "db:check": "node scripts/check-db.js",
+    "admin:create": "node scripts/create-admin-interactive.js",
+    "prod:build": "npm run db:generate && npm run build",
+    "prod:start": "npm run db:migrate:deploy && npm run start"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
