--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ events {
 
 http {
     upstream app {
-        server app:3000;
+        server app:3000;  # Внутри контейнера все еще порт 3000
     }
 
     # Общие настройки
