--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
+    "db:clear": "tsx scripts/clear-db.ts",
     "db:check": "node scripts/check-db.js",
     "admin:create": "node scripts/create-admin-interactive.js",
     "prod:build": "npm run db:generate && npm run build",
@@ -29,6 +30,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/nodemailer": "^7.0.1",
     "@types/redis": "^4.0.10",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -36,6 +38,7 @@
     "lucide-react": "^0.534.0",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "postgresql": "^0.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
