--- a/package.json
+++ b/package.json
@@ -1,70 +1,70 @@
 {
-  "name": "mastus-site",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "db:migrate": "prisma migrate dev",
-    "db:migrate:deploy": "prisma migrate deploy",
-    "db:generate": "prisma generate",
-    "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:clear": "tsx scripts/clear-db.ts",
-    "db:check": "node scripts/check-db.js",
-    "admin:create": "node scripts/create-admin-interactive.js",
-    "prod:build": "npm run db:generate && npm run build",
-    "prod:start": "npm run db:migrate:deploy && npm run start"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
-    "@hookform/resolvers": "^5.2.1",
-    "@prisma/client": "^6.13.0",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@types/nodemailer": "^7.0.1",
-    "@types/redis": "^4.0.10",
-    "bcryptjs": "^3.0.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.534.0",
-    "next": "15.4.5",
-    "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.1",
-    "postgresql": "^0.0.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
-    "react-redux": "^9.2.0",
-    "redis": "^5.7.0",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.14"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "prisma": "^6.13.0",
-    "tailwindcss": "^4",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  }
+    "name": "mastus-site",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "db:migrate": "prisma migrate dev",
+        "db:migrate:deploy": "prisma migrate deploy",
+        "db:generate": "prisma generate",
+        "db:studio": "prisma studio",
+        "db:seed": "tsx prisma/seed.ts",
+        "db:clear": "tsx scripts/clear-db.ts",
+        "db:check": "node scripts/check-db.js",
+        "db:test-delete": "node scripts/test-delete.js",
+        "admin:create": "node scripts/create-admin-interactive.js",
+        "prod:build": "npm run db:generate && npm run build",
+        "prod:start": "npm run db:migrate:deploy && npm run start"
+    },
+    "dependencies": {
+        "@auth/prisma-adapter": "^2.10.0",
+        "@hookform/resolvers": "^5.2.1",
+        "@prisma/client": "^6.13.0",
+        "@radix-ui/react-checkbox": "^1.3.2",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-navigation-menu": "^1.2.13",
+        "@radix-ui/react-select": "^2.2.5",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@reduxjs/toolkit": "^2.8.2",
+        "@types/nodemailer": "^7.0.1",
+        "@types/redis": "^4.0.10",
+        "bcryptjs": "^3.0.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.534.0",
+        "next": "15.4.5",
+        "next-auth": "^4.24.11",
+        "nodemailer": "^6.10.1",
+    "mysql2": "^3.11.3",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-hook-form": "^7.62.0",
+        "react-redux": "^9.2.0",
+        "tailwind-merge": "^3.3.1",
+        "zod": "^4.0.14"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/bcryptjs": "^2.4.6",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.4.5",
+        "prisma": "^6.13.0",
+        "tailwindcss": "^4",
+        "ts-node": "^10.9.2",
+        "tsx": "^4.20.3",
+        "tw-animate-css": "^1.3.6",
+        "typescript": "^5"
+    },
+    "prisma": {
+        "seed": "tsx prisma/seed.ts"
+    }
 }
