--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
         "@types/nodemailer": "^7.0.1",
         "@types/redis": "^4.0.10",
         "bcryptjs": "^3.0.2",
-        "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+    "formidable": "^3.5.0",
         "lucide-react": "^0.534.0",
         "next": "15.4.5",
         "next-auth": "^4.24.11",
