--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@reduxjs/toolkit": "^2.8.2",
+        "@uiw/react-markdown-preview": "^5.1.5",
+        "@uiw/react-md-editor": "^4.0.8",
         "@types/nodemailer": "^7.0.1",
         "@types/redis": "^4.0.10",
         "bcryptjs": "^3.0.2",
@@ -43,10 +45,14 @@
         "nodemailer": "^6.10.1",
     "mysql2": "^3.11.3",
         "react": "19.1.0",
+    "react-markdown": "^9.0.1",
         "react-dom": "19.1.0",
         "react-hook-form": "^7.62.0",
         "react-redux": "^9.2.0",
+    "rehype-raw": "^6.1.1",
+    "rehype-sanitize": "^6.0.0",
         "tailwind-merge": "^3.3.1",
+    "remark-gfm": "^4.0.0",
         "zod": "^4.0.14"
     },
     "devDependencies": {
